--- a/MVC/MVC.csproj
+++ b/MVC/MVC.csproj
@@ -14,12 +14,15 @@
 
 
 	<ItemGroup>
-	  <Folder Include="Middlewares\" />
+	  <Folder Include="Logs\" />
 	</ItemGroup>
 
 
 	<ItemGroup>
 	  <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+	  <PackageReference Include="Serilog.AspNetCore" Version="8.0.2-dev-00338" />
+	  <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+	  <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
 	  <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
 	</ItemGroup>
 
